fixing overlap and feedback changes

--- a/mystyle.css
+++ b/mystyle.css
@@ -110,7 +110,6 @@ nav a:hover{
 }
 /*fix this*/
 a{
-    text-decoration: none;
     color: black;
 }
 
@@ -176,7 +175,11 @@ div.desc {
 	text-align: center;
 	width: 100%;
 	margin-left: 10%;
+}
 
+#projTextH1-1{
+	text-align: center;
+	margin-top: 20px;
 }
 
 #project2{
